<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Aero Dragon</string>
    <string name="app_name_2">Aero Dragon - Configuration</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled">Bluetooth was not enabled.</string>
    <string name="bt_need_enable">Bluetooth needs to be enabled to use this application.</string>
    <string name="bt_already_on">Bluetooth is already switched on.</string>
    <string name="bt_already_off">Bluetooth is already switched off.</string>
    <string name="title_connecting">Connecting...</string>
    <string name="title_connected_to">Connected to <xliff:g id="device_name">%1$s</xliff:g> --> </string>
    <string name="title_not_connected">Not Connected</string>
    <string name="title_send_f1">
        Connected to <xliff:g id="device_name">%1$s</xliff:g> : Run function 1: 
        </string>
    <string name="title_send_f2">
        Connected to <xliff:g id="device_name">%1$s</xliff:g> : Run function 2: 
        </string>

    <!--  DeviceListActivity -->
    <string name="scanning">Scanning for devices...</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="dev_connect"></string>
    <string name="onOffBT"></string>
    <string name="config"></string>
    
    <!-- Buttons -->
    <string name="function_1">Function 1</string>
    <string name="function_2">Function 2</string>
    <string name="status">Not Connected</string>
    <string name="resetMap">Reset Map</string>
    <string name="modeBtn1">Manual Mode</string>
    <string name="modeBtn2">Auto Mode</string>
    <string name="explore">Exploration</string>
    <string name="shortPath">Shortest Path</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="timerVal">00:00:00</string>
    <string name="no_action">Please choose to Explore or find Shortest Path</string>
    
    <!-- Config -->
    <string name="fun_1">Function 1:</string>
    <string name="fun_2">Function 2:</string>
    <string name="display">Display Type: </string>
    <string name="displayBtn">2D</string>
    <string name="saveBtn">Save Changes</string>
    <string name="loadBtn">Load Data</string>
</resources>
